--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet">
         <!-- Fonts CSS-->
-        <link rel="stylesheet" href="css/heading.css">
+        <link rel="stylesheet" href="css/heading.csss">
         <link rel="stylesheet" href="css/body.css">
     </head>
     <body id="page-top">
         <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
-            <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top"><img id="brandImage" src="assets/img/PFPRevision (2).png" width="200" height="400" alt=""></a>
+            <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/img/PFPRevision (2).png" width="100" height="100" alt=""></a>
                 <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
